# collective

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  entrypoint.sh  manage.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apps/core/: __init__.py  apps.py  models.py  permissions.py  utils.py
apps/core/templatetags/: __init__.py  core_tags.py
apps/core/tests/: __init__.py  test_management_commands.py  test_models.py  test_permissions.py  test_template_tags.py  test_utils.py
apps/discussions/: admin.py  apps.py  constants.py  models.py  ordering.py  permissions.py  presenters.py  services.py  signals.py  urls.py  views.py
apps/discussions/migrations/: 0001_initial.py  0002_initial.py
apps/discussions/templatetags/: __init__.py  discussion_tags.py
apps/discussions/tests/: conftest.py  factories.py  test_models.py  test_permissions.py  test_services.py  test_views.py
apps/invitations/: admin.py  models.py  presenters.py  services.py  urls.py  views.py
apps/invitations/migrations/: 0001_initial.py
apps/invitations/tests/: test_models.py
apps/nodes/: admin.py  apps.py  constants.py  models.py  services.py  signals.py  urls.py  views.py
apps/nodes/migrations/: 0001_initial.py  0002_initial.py  0003_add_deleted_at_index.py  0004_node_is_draft.py  0005_alter_node_options_alter_postrevision_options_and_more.py
apps/nodes/templatetags/: nodes_tags.py
apps/nodes/tests/: factories.py  test_models.py  test_services.py  test_views.py
apps/opinions/: admin.py  apps.py  models.py  permissions.py  rate_limits.py  services.py  signals.py  urls.py  views.py
apps/opinions/migrations/: 0001_initial.py  0002_initial.py  0003_alter_opinion_options_alter_reaction_options.py
apps/opinions/templatetags/: opinions_tags.py
apps/pages/: apps.py  urls.py  views.py
apps/posts/: admin.py  apps.py  models.py  permissions.py  services.py  urls.py  views.py
apps/reactions/: admin.py  apps.py  models.py  permissions.py  services.py  signals.py  urls.py  views.py
apps/spaces/: admin.py  apps.py  constants.py  docx_import.py  forms.py  import_support.py  markdown_import.py  models.py  permissions.py  presenters.py  querysets.py  request_context.py  services.py  urls.py  views.py
apps/subscriptions/: admin.py  apps.py  context_processors.py  models.py  notification_services.py  permissions.py  services.py  signals.py  subscription_services.py  urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
assets/styles/: app.css
collective/: asgi.py  settings.py  urls.py  views.py  wsgi.py
collective/settings/: __init__.py  base.py  development.py  env.py  production.py  storage.py  test.py
collective/tests/: test_env_settings.py  test_production_settings.py  test_storage_settings.py
static/examples/: space-import-example.docx  space-import-example.md
templates/: base.html  landing.html
templates/account/: _base_card.html  _form_field.html  confirm_email_verification_code.html  email.html  email_change.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html
templates/users/: profile.html
(+106 files in other folders)
